--- a/app/src/main/res/layout/fragment_intro_page1.xml
+++ b/app/src/main/res/layout/fragment_intro_page1.xml
@@ -6,29 +6,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_intro_page1"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_intro_page1"
-            app:srcCompat="@drawable/img_intro1" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.43">
 
-        <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_intro_page1"
-            android:layout_width="279dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="112dp"
-            android:text="@string/tv_intro_page1"
-            android:textColor="#423f3f"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:bufferType="spannable"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_intro_page1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/iv_intro_page1"
+                android:layout_marginBottom="50dp"
+                android:bufferType="spannable"
+                android:text="@string/tv_intro_page1"
+                android:textColor="#423f3f"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_alignLeft="@+id/iv_intro_page1" />
+
+            <ImageView
+                android:id="@+id/iv_intro_page1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_intro_page1"
+                app:srcCompat="@drawable/img_intro1" />
+
+        </RelativeLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
