--- a/app/src/main/res/layout/fragment_intro_page2.xml
+++ b/app/src/main/res/layout/fragment_intro_page2.xml
@@ -6,28 +6,38 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.43">
+
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_intro_page2"
-            android:layout_width="303dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="112dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/tv_intro_page2"
             android:textColor="#423f3f"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_alignStart="@+id/iv_intro_page2"
+            android:layout_marginBottom="50dp"
+            android:layout_alignLeft="@+id/iv_intro_page2" />
 
         <ImageView
             android:id="@+id/iv_intro_page2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_intro_page2"
+            android:layout_below="@+id/tv_intro_page2"
             app:srcCompat="@drawable/img_intro2" />
+        </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
 </layout>
