--- a/app/src/main/res/layout/fragment_intro_page3.xml
+++ b/app/src/main/res/layout/fragment_intro_page3.xml
@@ -6,29 +6,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_intro_page3"
-            android:layout_width="303dp"
-            android:layout_height="160dp"
-            android:layout_marginTop="112dp"
-            android:text="@string/tv_intro_page3"
-            android:textColor="#423f3f"
-            android:textSize="16sp"
-            android:textStyle="bold"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:bufferType="spannable"/>
+            app:layout_constraintVertical_bias="0.43">
 
-        <ImageView
-            android:id="@+id/iv_intro_page3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_intro_page3"
-            app:srcCompat="@drawable/img_intro3" />
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_intro_page3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/iv_intro_page3"
+                android:paddingStart="13dp"
+                android:layout_marginBottom="20dp"
+                android:text="@string/tv_intro_page3"
+                android:textColor="#423f3f"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:bufferType="spannable"
+                android:layout_alignLeft="@+id/iv_intro_page3"
+                android:paddingLeft="13dp" />
+
+            <ImageView
+                android:id="@+id/iv_intro_page3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_intro_page3"
+                app:srcCompat="@drawable/img_intro3" />
+
+        </RelativeLayout>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
