--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -11,31 +11,35 @@
             android:id="@+id/tv_splash_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
             android:text="@string/tv_splash_subtitle"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/nanum_square_round_b"
+            app:layout_constraintBottom_toTopOf="@+id/iv_splash_title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3" />
+            app:layout_constraintVertical_bias="0.58000004"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <ImageView
             android:id="@+id/iv_splash_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
+            app:layout_constraintBottom_toTopOf="@+id/iv_splash"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="80dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_splash_subtitle"
-            app:srcCompat="@drawable/img_title" />
+            app:srcCompat="@drawable/img_title"
+            app:layout_constraintVertical_chainStyle="packed"/>
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/iv_splash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_splash_copyright"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_splash_title"
@@ -50,6 +54,8 @@
             android:layout_marginBottom="10dp"
             android:text="@string/tv_splash_copyright"
             android:textSize="10sp"
+            android:textColor="#ffffff"
+            android:fontFamily="@font/nanum_square_round_r"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
