로그인 버튼 모양 drawable 추가 / NotoEditText 추가 / 버튼 drawable 그림자 업데이트 / fragment에서 databinding 버튼 동작 테스트 / gradle databinding import 코드 수정

--- a/app/src/main/res/layout/fragment_intro_base.xml
+++ b/app/src/main/res/layout/fragment_intro_base.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="intro"
+            type="com.thustop_00.intro.IntroBaseFragment" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -93,7 +99,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/indicator_view" />
+            app:layout_constraintTop_toBottomOf="@id/indicator_view"
+            android:onClick="@{intro::onStartClick}"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
