--- a/app/src/main/res/drawable/button_round_kakao.xml
+++ b/app/src/main/res/drawable/button_round_kakao.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
+    <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="#f5dc34" />
             <corners android:radius="25dp" />
         </shape>
         <shape android:shape="rectangle">
@@ -12,7 +12,7 @@
                 android:bottom="1dp"
                 android:left="0dp"
                 android:right="0dp"
-                android:top="0dp"/>
+                android:top="0dp" />
         </shape>
     </item>
 </selector>
