로그인, 약관동의, 회원가입, 가입 완료 레이아웃 추가 완료/ notnull annotation위안 implement gradle에 추가/ style noActionBar로 변경후 매니페스트 수정/ 툴바의 타이틀 수정해보려고 색상 변수 추가/ Navigation drawer관련 사항 추가, drawer 사용시 databinding하는것 가능한듯/ 툴바 중앙에 텍스트뷰하나 추가함(레이아웃상에서)/
*확인 바라는 점*
툴바부분 건들지 말래서 안건들였으나 툴바 show, hide 안됨 확인요망/ 나중의 보기 버튼 동작 안됨, 이용시작은 작동됨 databinding으로 onclick할거면 추가해주세요~/

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,26 +3,47 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <androidx.drawerlayout.widget.DrawerLayout
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tb_main"
+        android:layout_width="match_parent"
+        android:id="@+id/drawer_layout">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:minHeight="90dp"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
 
-        <FrameLayout
-            android:id="@+id/frMain"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/tb_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00ff0000"
+                android:minHeight="90dp"
+                android:theme="?attr/actionBarTheme"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" >
+                <com.thustop_00.widgets.NotoTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:id="@+id/tv_title"
+                    android:text="이번 정류장"
+                    android:textSize="18sp"
+                    android:layout_gravity="center"
+                    android:textStyle="normal" />
+            </androidx.appcompat.widget.Toolbar>
+            <FrameLayout
+                android:id="@+id/frMain"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_gravity="start"
+            android:layout_width="232dp"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/navi_header"
+            app:menu="@menu/navi_menu"/>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
