--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -32,7 +32,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="80dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_splash_subtitle"
-            app:srcCompat="@drawable/img_title"
+            app:srcCompat="@drawable/img_splash_title"
             app:layout_constraintVertical_chainStyle="packed"/>
 
         <ImageView
