--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,22 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="10dp">
 
-        <com.thustop_00.widgets.NotoButton
-            android:id="@+id/gologin"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="로그인창 열기"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="?attr/actionBarSize" />
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:entries="@array/province"
+            app:layout_constraintStart_toStartOf="@id/tvSelLocal"
+            app:layout_constraintEnd_toEndOf="@id/tvSelLocal"
+            app:layout_constraintTop_toTopOf="@id/tvSelLocal"
+            app:layout_constraintBottom_toBottomOf="@id/tvSelLocal"/>
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tvSelLocal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/main_sel_local"
+            android:paddingStart="40dp"
+            android:paddingTop="9dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="9dp"
+            android:text="서비스 지역 선택"
+            android:textColor="#979797"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toStartOf="@id/gps"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            app:layout_constraintBottom_toBottomOf="@id/top_layout"
+            tools:ignore="HardcodedText" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_down"
+            android:layout_marginEnd="12dp"
+            android:id="@+id/ivSelLocal"
+            app:layout_constraintTop_toTopOf="@id/tvSelLocal"
+            app:layout_constraintBottom_toBottomOf="@id/tvSelLocal"
+            app:layout_constraintStart_toStartOf="@id/tvSelLocal"
+            android:layout_marginStart="9dp"
+            tools:ignore="ContentDescription"/>
+
+        <ImageButton
+            android:id="@+id/gps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/main_sel_local"
+            android:paddingStart="9dp"
+            android:paddingTop="6dp"
+            android:paddingEnd="9dp"
+            android:paddingBottom="6dp"
+            android:src="@drawable/gps_main"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            app:layout_constraintBottom_toBottomOf="@id/top_layout"
+            tools:ignore="ContentDescription"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
